<resources>
    <string name="app_name">Alura Viagens</string>
    <string name="preco_final">Preço final:</string>
    <string name="realizar_pagamento">Realizar o pagamento</string>
    <string name="imagem_do_pacote">Imagem do pacote</string>
    <string name="MascaraNomeCartao">abcdefghijklmnopqrstuvwxyzçABCDEFGHIJKLMNOPQRSTUVWXYZÇ \u0020</string>
    <string name="orientacao_pagamento">Digite as informações do cartão que você deseja usar para o pagamento</string>
    <string name="valor_da_compra">Valor da compra:</string>
    <string name="numero_do_cartao">Número do cartão</string>
    <string name="mesCartao">MM</string>
    <string name="ano_cartao">AA</string>
    <string name="finalizar_compra">Finalizar compra</string>
    <string name="nome_no_cartao">Nome no cartão</string>
    <string name="cvc">CVC</string>
    <string name="parabens">Parabéns!</string>
    <string name="pagamento_com_sucesso">Compra ralizada com sucesso :)</string>
    <string name="mensagem_resumo">Confira o resumo da compra</string>
    <string name="banner_inicial">Banner inicial</string>
</resources>
